# raytracer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters  build.sh  camera.h  create_release_zip.bat  hitable.h  hitablelist.h  imgui.ini  main.cpp  material.h  ray.h  raytracer.h  readme.md  readme.txt  sphere.h  util.h  vec3.h
RayTracerConsole/: RayTracerConsole.vcxproj  RayTracerConsole.vcxproj.filters
RayTracerLib/: RayTracerLib.vcxproj  RayTracerLib.vcxproj.filters
RayTracerWindows/: RayTracerWindows.cpp  RayTracerWindows.rc  RayTracerWindows.vcxproj  RayTracerWindows.vcxproj.filters  Resource.h  WinMain.cpp
RuntimeData/: cube.stl  luigi.mtl  r8.mtl
RuntimeData/OutputImages/: placeholder.txt
Source/: ConsoleMain.cpp  DenoisePass.hpp  FullscreenPSOSetup.hpp  FullscreenRender.hpp  HandleGui.hpp  HandleInput.hpp  RasterPass.hpp  RasterRender.hpp  RaytracingPass.hpp  RaytracingRender.hpp  RaytracingSetup.hpp  RaytracingShader.h  RaytracingShaderInclude.h  RealtimePSOSetup.hpp  RealtimeRender.hpp  RenderCamera.h  RenderScene.h  Renderer.cpp  Renderer.h  RendererShaderInclude.h  SampleScenes.cpp  SampleScenes.h  WindowsRenderApp.h  main.cpp
Source/Core/: AABB.h  BVHNode.cpp  BVHNode.h  BVHNode.hpp  CPUCompile.cpp  Camera.cpp  Camera.h  Camera.hpp  ConstantMedium.cpp  ConstantMedium.h  ConstantMedium.hpp  CoreTexture.cpp  CoreTexture.h  CoreTriangle.h  CoreTriangle.hpp  FlipNormals.cpp  FlipNormals.h  FlipNormals.hpp  Hitable.h  HitableBox.cpp  HitableBox.h  HitableBox.hpp  HitableList.cpp  (+42 more)
(+170 files in other folders)
